修改index文件 index.html

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   
   <title>Luuman&#39;s Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="luuman，90后，水瓶座普通男青年！爱折腾，爱运动，更爱游离于错综复杂的编码与逻辑中，无法自拔。相信编程是一门艺术，自诩为游弋在代码里的人生。">
+  <meta name="description" content="niwei，90后双子座！爱折腾，爱运动，更爱游离于错综复杂的编码与逻辑中，无法自拔。相信编程是一门艺术，自诩为游弋在代码里的人生。">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Luuman's Blog">
 <meta property="og:url" content="http://luuman.github.io/index.html">
 <meta property="og:site_name" content="Luuman's Blog">
-<meta property="og:description" content="luuman，90后，水瓶座普通男青年！爱折腾，爱运动，更爱游离于错综复杂的编码与逻辑中，无法自拔。相信编程是一门艺术，自诩为游弋在代码里的人生。">
+<meta property="og:description" content="niwei，90后双子座！爱折腾，爱运动，更爱游离于错综复杂的编码与逻辑中，无法自拔。相信编程是一门艺术，自诩为游弋在代码里的人生。">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Luuman's Blog">
-<meta name="twitter:description" content="luuman，90后，水瓶座普通男青年！爱折腾，爱运动，更爱游离于错综复杂的编码与逻辑中，无法自拔。相信编程是一门艺术，自诩为游弋在代码里的人生。">
+<meta name="twitter:description" content="niwei，90后双子座！爱折腾，爱运动，更爱游离于错综复杂的编码与逻辑中，无法自拔。相信编程是一门艺术，自诩为游弋在代码里的人生。">
   
     <link rel="alternative" href="/atom.xml" title="Luuman&#39;s Blog" type="application/atom+xml">
   
